# iso-26262-coding-standard-extraction

./: Cargo.toml  clippy.toml
manifests/: citation_parity_baseline.lock.json  semantic_model_config.lock.json  semantic_retrieval_baseline.lock.json
scripts/: README.md  benchmark_query_modes.sh  check_file_size_budget.sh  refresh_quality_artifacts.sh  regression_capture.sh  regression_compare.sh  regression_gate.sh  smoke_part6.sh
scripts/lib/benchmark/: report.jq
scripts/lib/refresh/: compatibility.sh  decisions.sh  env.sh  state.sh  steps.sh
scripts/lib/regression/: compare.jq  thresholds.json
src/: cli.rs  main.rs  model.rs  semantic.rs  util.rs
src/commands/: ingest.rs  inventory.rs  mod.rs  query.rs  status.rs  validate.rs
src/commands/embed/: mod.rs  payload.rs  prelude.rs  run.rs  store.rs  types.rs
src/commands/ingest/: db_setup.rs  ids_and_outline.rs  list_note_requirement_insert.rs  mod.rs  node_and_table_insert.rs  ocr_manifest.rs  ocr_tools_and_manifest.rs  page_extract_and_normalize.rs  paragraphs_and_list_parse.rs  pipeline.rs  pipeline_page_chunks.rs  pipeline_section_nodes.rs  pipeline_structured_chunks.rs  run.rs  structured_insertions.rs  structured_types.rs  table_parse_quality_part1.rs  table_parse_quality_part2.rs  tests.rs  types_and_structured.rs
src/commands/query/: citation.rs  fusion.rs  hierarchy.rs  hierarchy_and_citation.rs  intent.rs  mod.rs  output.rs  pinpoint.rs  ranking.rs  ranking_and_output.rs  result_hydration.rs  retrieval.rs  run.rs  semantic_and_fusion.rs  semantic_retrieval.rs  text.rs
(+34 files in other folders)
